feat: show Misskey main contributors in About Firefish

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -1220,6 +1220,7 @@ _aboutFirefish:
     development since 2022."
   contributors: "Main contributors"
   allContributors: "All contributors"
+  originalMisskeyContributors: "Original Misskey main contributors"
   source: "Source code"
   translation: "Translate Firefish"
   donate: "Donate to Firefish"
