feat: ability to show preview in posting form by default (close #5)

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -1125,6 +1125,8 @@ removeQuote: "Remove quote"
 removeRecipient: "Remove recipient"
 removeMember: "Remove member"
 verifiedLink: "Verified link"
+showPreviewByDefault: "Show preview in posting form by default"
+originalFeature: "original"
 
 _sensitiveMediaDetection:
   description: "Reduces the effort of server moderation through automatically recognizing
