--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -987,6 +987,8 @@ neverShow: "今後表示しない"
 remindMeLater: "また後で"
 showPreviewByDefault: "投稿画面でプレビュー表示をデフォルトでオンにする"
 originalFeature: "独自機能"
+preventMisclick: "誤タップ防止"
+hideFollowButtons: "新規フォロワーの通知とユーザーページの ... の隣にあるフォローボタンを隠す"
 
 _sensitiveMediaDetection:
   description: "機械学習を使って自動でセンシティブなメディアを検出し、モデレーションに役立てられます。サーバーの負荷が少し増えます。"
