--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -1964,3 +1964,8 @@ donationLink: 寄付ページへのリンク
 removeMember: メンバーを削除
 removeQuote: 引用を削除
 removeRecipient: 宛先を削除
+_feeds:
+  copyFeed: "フィードURLをコピー"
+  rss: "RSS"
+  atom: "Atom"
+  jsonFeed: "JSONフィード"
