--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -1131,6 +1131,7 @@ preventMisclick: "Accidental click prevention"
 hideFollowButtons: "Hide follow buttons in notifications and user pages"
 forMobile: "Mobile"
 replaceChatButtonWithAccountButton: "Replace chat button at the bottom with account switch button"
+replaceWidgetsButtonWithReloadButton: "Replace widgets button at the bottom with reload button"
 
 _sensitiveMediaDetection:
   description: "Reduces the effort of server moderation through automatically recognizing
