feat: Ai-chan widget (close #55)
This reverts commit 7095abf728ab584221a2268d4c66c9bfc2be284e.

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -1621,6 +1621,7 @@ _widgets:
   jobQueue: "Job Queue"
   serverMetric: "Server Metrics"
   aiscript: "AiScript Console"
+  aichan: "Ai"
   userList: "User List"
   serverInfo: "Server Info"
   _userList:
