--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -992,6 +992,7 @@ hideFollowButtons: "新規フォロワーの通知とユーザーページの ..
 forMobile: "モバイル向け"
 replaceChatButtonWithAccountButton: "画面下部のチャットのボタンをアカウント切り替えボタンに変更する"
 replaceWidgetsButtonWithReloadButton: "画面下部のウィジェットのボタンを再読み込みボタンに変更する"
+addRe: "閲覧注意の投稿への返信で、注釈の先頭に\"re:\"を追加する"
 
 _sensitiveMediaDetection:
   description: "機械学習を使って自動でセンシティブなメディアを検出し、モデレーションに役立てられます。サーバーの負荷が少し増えます。"
