--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -896,7 +896,7 @@ customCssWarn: "This setting should only be used if you know what it does. Enter
   improper values may cause the client to stop functioning normally."
 global: "Global"
 recommended: "Recommended"
-squareAvatars: "Display squared avatars"
+squareAvatars: "Display squared avatars for non-cats"
 seperateRenoteQuote: "Separate boost and quote buttons"
 sent: "Sent"
 received: "Received"
