--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -995,6 +995,7 @@ forMobile: "モバイル向け"
 replaceChatButtonWithAccountButton: "画面下部のチャットのボタンをアカウント切り替えボタンに変更する"
 replaceWidgetsButtonWithReloadButton: "画面下部のウィジェットのボタンを再読み込みボタンに変更する"
 addRe: "閲覧注意の投稿への返信で、注釈の先頭に\"re:\"を追加する"
+detectPostLanguage: "投稿の言語を自動検出し、外国語の投稿に翻訳ボタンを表示する"
 
 _sensitiveMediaDetection:
   description: "機械学習を使って自動でセンシティブなメディアを検出し、モデレーションに役立てられます。サーバーの負荷が少し増えます。"
