--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -1076,7 +1076,7 @@ _aboutFirefish:
   about: "Firefishは、2022年に生まれたThatOneCalculatorによるMisskeyのforkです。"
   contributors: "主なコントリビューター"
   allContributors: "全てのコントリビューター"
-  originalMisskeyContributors: "フォーク元のMisskeyの主なコントリビューター"
+  misskeyContributors: "フォーク元のMisskeyの主なコントリビューター"
   source: "ソースコード"
   translation: "Firefishを翻訳"
   donate: "Firefishに寄付"
