--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -1144,6 +1144,7 @@ inputNotMatch: "Input does not match"
 detectPostLanguage: "Automatically detect the language and show a translate button for non-English posts"
 languageForTranslation: "Language used for post translation"
 addRe: "Add \"re:\" at the beginning of comment in reply to a post with a content warning"
+showBigPostButton: "Show a bigger post button in the posting form"
 
 _sensitiveMediaDetection:
   description: "Reduces the effort of server moderation through automatically recognizing
